--- a/app/templates/eventFrameTemplateViews/eventFrameAttributeTemplates.html
+++ b/app/templates/eventFrameTemplateViews/eventFrameAttributeTemplates.html
@@ -3,41 +3,71 @@
 {% block title %}Event Frame Template View{% endblock %}
 
 {% block page_content %}
-<div>
-    <ol class = "breadcrumb">
-        {% set origin = eventFrameTemplateView.EventFrameTemplate.origin() %}
-        <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
-        <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-            selectedId = origin.ElementTemplate.Site.Enterprise.id()) }}'>{{ origin.ElementTemplate.Site.Enterprise.Name }}</a></li>
-        <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-            selectedId = origin.ElementTemplate.Site.id()) }}'>{{ origin.ElementTemplate.Site.Name }}</a></li>
-        <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-            selectedId = origin.ElementTemplate.id()) }}'>{{ origin.ElementTemplate.Name }}</a></li>
-        {% for ancestor in eventFrameTemplateView.EventFrameTemplate.ancestors([]) %}
-            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate", selectedId = ancestor.id(),
-                selectedOperation = "configure") }}'>{{ ancestor.Name }}</a></li>
-        {% endfor %}
-        <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate",
-            selectedId = eventFrameTemplateView.EventFrameTemplate.EventFrameTemplateId, selectedOperation = "configure") }}'>
-            {{ eventFrameTemplateView.EventFrameTemplate.Name }}</a></li>
-        <li class = "active">
-            <a title = "Previous" href = '{{ url_for("eventFrameTemplateViews.eventFrameAttributeTemplates",
-                eventFrameTemplateViewId = eventFrameTemplateView.previous().EventFrameTemplateViewId) }}'>
-                <span class = "glyphicon glyphicon-arrow-left"></span></a>
-            <a title = "Next" href = '{{ url_for("eventFrameTemplateViews.eventFrameAttributeTemplates",
-                eventFrameTemplateViewId = eventFrameTemplateView.next().EventFrameTemplateViewId) }}'>
-                <span class = "glyphicon glyphicon-arrow-right"></span></a>    
-            {{ eventFrameTemplateView.Name }}
-        </li>
-    </ol>
-</div>
-<div class = "page-header">
-        <h1>Event Frame Template View <small></small></h1>
+    <div>
+        <ol class = "breadcrumb">
+            {% set origin = eventFrameTemplateView.EventFrameTemplate.origin() %}
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+                selectedId = origin.ElementTemplate.Site.Enterprise.id()) }}'>{{ origin.ElementTemplate.Site.Enterprise.Name }}</a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
+                selectedId = origin.ElementTemplate.Site.id()) }}'>{{ origin.ElementTemplate.Site.Name }}</a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
+                selectedId = origin.ElementTemplate.id()) }}'>{{ origin.ElementTemplate.Name }}</a></li>
+            {% for ancestor in eventFrameTemplateView.EventFrameTemplate.ancestors([]) %}
+                <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate", selectedId = ancestor.id(),
+                    selectedOperation = "configure") }}'>{{ ancestor.Name }}</a></li>
+            {% endfor %}
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate",
+                selectedId = eventFrameTemplateView.EventFrameTemplate.EventFrameTemplateId, selectedOperation = "configure") }}'>
+                {{ eventFrameTemplateView.EventFrameTemplate.Name }}</a></li>
+            <li class = "active">
+                <a title = "Previous" href = '{{ url_for("eventFrameTemplateViews.eventFrameAttributeTemplates",
+                    eventFrameTemplateViewId = eventFrameTemplateView.previous().EventFrameTemplateViewId) }}'>
+                    <span class = "glyphicon glyphicon-arrow-left"></span></a>
+                <a title = "Next" href = '{{ url_for("eventFrameTemplateViews.eventFrameAttributeTemplates",
+                    eventFrameTemplateViewId = eventFrameTemplateView.next().EventFrameTemplateViewId) }}'>
+                    <span class = "glyphicon glyphicon-arrow-right"></span></a>    
+                {{ eventFrameTemplateView.Name }}
+            </li>
+        </ol>
     </div>
     <div class = "page-header">
-        <h1>
-            <small>Selected Event Frame Attribute Templates</small>
+        <h1>Event Frame Template View
             <button class = "btn btn-default" id = "buttonSave" title = "Save"><span class = "glyphicon glyphicon-floppy-disk"></span></button>
+        </h1>
+    </div>
+    <div>
+        <h1>
+            <small>Display Options</small>
+        </h1>
+    </div>
+    <div class = "checkbox">
+        <label><input id = "inputSelectButton" type = "checkbox"
+            {{ "checked" if dictionary["showSelectButton"] == "True" or "showSelectButton" not in dictionary }}>Select Button&nbsp;&nbsp;</label>
+        <label><input id = "inputStartTimestamp" type = "checkbox"
+            {{ "checked" if dictionary["showStartTimestamp"] == "True" or "showStartTimestamp" not in dictionary }}>Start Timestamp&nbsp;&nbsp;</label>
+        <label><input id = "inputEndTimestamp" type = "checkbox"
+            {{ "checked" if dictionary["showEndTimestamp"] == "True" or "showEndTimestamp" not in dictionary }}>End Timestamp&nbsp;&nbsp;</label>
+        <label><input id = "inputLastTimestamp" type = "checkbox"
+            {{ "checked" if dictionary["showLastTimestamp"] == "True" or "showLastTimestamp" not in dictionary }}>Last Timestamp&nbsp;&nbsp;</label>
+        <label><input id = "inputLastValue" type = "checkbox"
+            {{ "checked" if dictionary["showLastValue"] == "True" or "showLastValue" not in dictionary }}>Last Value&nbsp;&nbsp;</label>
+        <label><input id = "inputUnit" type = "checkbox"
+            {{ "checked" if dictionary["showUnit"] == "True" or "showUnit" not in dictionary }}>Unit&nbsp;&nbsp;</label>
+        <label><input id = "inputNoteButton" type = "checkbox"
+            {{ "checked" if dictionary["showNoteButton"] == "True" or "showNoteButton" not in dictionary }}>Note Button&nbsp;&nbsp;</label>
+        <label><input id = "inputRemoveButton" type = "checkbox"
+            {{ "checked" if dictionary["showRemoveButton"] == "True" or "showRemoveButton" not in dictionary }}>Remove Button&nbsp;&nbsp;</label>
+        <label><input id = "inputStopButton" type = "checkbox"
+            {{ "checked" if dictionary["showStopButton"] == "True" or "showStopButton" not in dictionary }}>Stop Button&nbsp;&nbsp;</label>
+        <label><input id = "inputEditButton" type = "checkbox"
+            {{ "checked" if dictionary["showEditButton"] == "True" or "showEditButton" not in dictionary }}>Edit Button&nbsp;&nbsp;</label>
+        <label><input id = "inputDeleteButton" type = "checkbox"
+            {{ "checked" if dictionary["showDeleteButton"] == "True" or "showDeleteButton" not in dictionary }}>Delete Button&nbsp;&nbsp;</label>
+    </div>
+    <div>
+        <h1>
+            <small>Event Frame Attribute Templates</small>
         </h1>
     </div>
     <div>
@@ -90,6 +120,7 @@
             ({
                 "pageLength": 25,
                 "rowReorder": true,
+                "searching": false,
                 columnDefs:
                 [
                     {orderable: true, className: "reorder", targets: 0},
@@ -101,7 +132,74 @@
 
             $("#buttonSave").on("click", function()
             {
+                var dictionary = {}
+                var showSelectButton = $("#inputSelectButton").is(":checked")
+                var showStartTimestamp = $("#inputStartTimestamp").is(":checked")
+                var showEndTimestamp = $("#inputEndTimestamp").is(":checked")
+                var showLastTimestamp = $("#inputLastTimestamp").is(":checked")
+                var showLastValue = $("#inputLastValue").is(":checked")
+                var showUnit = $("#inputUnit").is(":checked")
+                var showNoteButton = $("#inputNoteButton").is(":checked")
+                var showRemoveButton = $("#inputRemoveButton").is(":checked")
+                var showStopButton = $("#inputStopButton").is(":checked")
+                var showEditButton = $("#inputEditButton").is(":checked")
+                var showDeleteButton = $("#inputDeleteButton").is(":checked")
                 var eventFrameAttributeTemplateIds = {}
+
+                if (showSelectButton == false)
+                {
+                    dictionary["showSelectButton"] = false
+                }
+
+                if (showStartTimestamp == false)
+                {
+                    dictionary["showStartTimestamp"] = false
+                }
+
+                if (showEndTimestamp == false)
+                {
+                    dictionary["showEndTimestamp"] = false
+                }
+
+                if (showLastTimestamp == false)
+                {
+                    dictionary["showLastTimestamp"] = false
+                }
+
+                if (showLastValue == false)
+                {
+                    dictionary["showLastValue"] = false
+                }
+
+                if (showUnit == false)
+                {
+                    dictionary["showUnit"] = false
+                }
+
+                if (showNoteButton == false)
+                {
+                    dictionary["showNoteButton"] = false
+                }
+
+                if (showRemoveButton == false)
+                {
+                    dictionary["showRemoveButton"] = false
+                }
+
+                if (showStopButton == false)
+                {
+                    dictionary["showStopButton"] = false
+                }
+
+                if (showEditButton == false)
+                {
+                    dictionary["showEditButton"] = false
+                }
+
+                if (showDeleteButton == false)
+                {
+                    dictionary["showDeleteButton"] = false
+                }
 
                 $("input:checked", table.nodes().to$()).each(function()
                 {
@@ -114,7 +212,7 @@
                 {
                     type : "POST",
                     url : "/eventFrameTemplateViews/editEventFrameAttributeTemplates/{{ eventFrameTemplateView.EventFrameTemplateViewId }}",
-                    data : JSON.stringify(eventFrameAttributeTemplateIds)
+                    data : JSON.stringify([dictionary, eventFrameAttributeTemplateIds])
                 }).done(function(response)
                 {
                     location.reload(true)
