--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -95,7 +95,6 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th></th>
                         <th>Template</th>
                         <th>Name</th>
                         <th>User</th>
@@ -109,23 +108,13 @@
                 <tbody>
                     {% for eventFrame in eventFrame.EventFrames %}
                         <tr>
-                            {% if eventFrame.EventFrameNotes.all() | count == 0 %}
-                                {% set noteButtonClass = "btn btn-default" %}
-                            {% else %}
-                                {% set noteButtonClass = "btn btn-default  has-note" %}
-                            {% endif %}
                             {% if eventFrameEventFrameGroup is none %}
                                 <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("eventFrames.dashboard",
                                     eventFrameId = eventFrame.EventFrameId) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
-                                <td><a class = "{{ noteButtonClass }}" title = "Notes" href = '{{ url_for("eventFrames.dashboard",
-                                    eventFrameId = eventFrame.EventFrameId) }}#Notes'><span class = "glyphicon glyphicon-comment"></span></a></td>
                             {% else %}
                                 <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("eventFrames.dashboard",
                                     eventFrameId = eventFrame.EventFrameId, eventFrameGroupId = eventFrameEventFrameGroup.EventFrameGroupId) }}'>
                                     <span class = "glyphicon glyphicon-list"></span></a></td>
-                                <td><a class = "{{ noteButtonClass }}" title = "Notes" href = '{{ url_for("eventFrames.dashboard",
-                                    eventFrameId = eventFrame.EventFrameId, eventFrameGroupId = eventFrameEventFrameGroup.EventFrameGroupId) }}#Notes'>
-                                    <span class = "glyphicon glyphicon-comment"></span></a></td>
                             {% endif %}
                             <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
                             <td>{{ eventFrame.Name }}</td>
@@ -282,7 +271,7 @@
         </table>
     </div>
     <div class = "page-header">
-        <h1 id = "Notes">Notes <small>{{ eventFrame.origin().Element.Name }}</small></h1>
+        <h1>Notes <small>{{ eventFrame.origin().Element.Name }}</small></h1>
     </div>
     <div>
         {% if eventFrameEventFrameGroup is none %}
@@ -334,7 +323,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
     {% block setTabIndex %}
@@ -367,12 +356,11 @@
             ({
                 "order":
                 [
-                    [5, "desc"],            // Start timestamp.
+                    [3, "desc"],            // Start timestamp.
                 ],
                 "columns":
                 [
                     { "orderable": false }, // Select button.
-                    { "orderable": false }, // Notes button.
                     null,
                     null,
                     null,
@@ -443,7 +431,7 @@
             $("#attributesTable").attr("style", "width:100%")
             $("#eventFrameNotesTable").attr("style", "width:100%")
 
-            $("#buttonSave").on("click", function()
+            $("#buttonSave").on("click", function()
             {
                 var error = false
                 var rows = []
@@ -553,7 +541,7 @@
                             "data-dismiss = \"alert\">&times;</button>The attempt to save one or more new element attribute values failed.</div>")                        
                     })
                 }
-            })
+            })
 
             // Enter key call save all.
             $(document).keypress(function(event)
