--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -175,7 +175,7 @@
             {% endif %}
             <a type = "button" class = "{{ class }}" title = "All" 
                 href = '{{ href }}' role = "button">All</a>
-            {% for eventFrameTemplateView in eventFrame.EventFrameTemplate.EventFrameTemplateViews %}
+            {% for eventFrameTemplateView in eventFrame.EventFrameTemplate.EventFrameTemplateViews | sort(attribute = "Name") %}
                 {% if eventFrameTemplateView.EventFrameTemplateViewId ==  activeEventFrameTemplateViewId %}
                     {% set class = "btn btn-primary btn-xs active" %}
                 {% else %}
